--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <style>
         :root {
-            --bg: #0d1117;
-            --card: #161b22;
-            --text: #e6edf3;
-            --muted: #9da7b3;
-            --accent: #58a6ff;
+            --bg: #000000;          /* Pure black */
+            --card: #0f1a0f;        /* Dark green-black */
+            --text: #eaffea;        /* Soft green-white */
+            --muted: #9acd9a;       /* Muted green */
+            --accent: #00ff66;      /* Neon green */
         }
 
         * {
@@ -145,11 +145,12 @@
             background: var(--card);
             padding: 25px;
             border-radius: 10px;
-            transition: transform 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .card:hover {
             transform: translateY(-6px);
+            box-shadow: 0 0 15px rgba(0, 255, 102, 0.4);
         }
 
         .card h4 {
@@ -189,6 +190,7 @@
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#education">Education</a>
+            <a href="#assignments">Assignments</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -281,6 +283,35 @@
                 <h4>Class 10 – ISC Board</h4>
                 <p>Developed analytical thinking and problem-solving skills.</p>
             </div>
+        </div>
+    </section>
+
+    <!-- Assignments -->
+    <section id="assignments">
+        <h2>Assignments</h2>
+        <div class="grid">
+
+            <div class="card">
+                <h4>Data Structures Assignment</h4>
+                <p>Implementation of stacks, queues, linked lists, and trees using C/C++.</p>
+                <p><b>Subject:</b> Data Structures</p>
+                <a href="#">View Assignment</a>
+            </div>
+
+            <div class="card">
+                <h4>AI Algorithms Lab</h4>
+                <p>Hands-on implementation of BFS, DFS, Dijkstra, KNN, and K-Means algorithms.</p>
+                <p><b>Subject:</b> Artificial Intelligence</p>
+                <a href="#">View Assignment</a>
+            </div>
+
+            <div class="card">
+                <h4>Machine Learning Models</h4>
+                <p>Regression and classification models implemented using Python and NumPy.</p>
+                <p><b>Subject:</b> Machine Learning</p>
+                <a href="#">View Assignment</a>
+            </div>
+
         </div>
     </section>
 
