--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#education">Education</a>
-            <a href="#assignments">Assignments</a>
+            <a href="#academic-artifacts">Academic Artifacts</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -245,8 +245,7 @@
         <div class="grid">
             <div class="card">
                 <h4>Online Examination System</h4>
-                <p>Console-based exam management system using C and file handling for student data, exams, and results.
-                </p>
+                <p>Console-based exam management system using C and file handling for student data, exams, and results.</p>
                 <p><b>Tech:</b> C, File I/O</p>
                 <a href="#">View Code</a>
             </div>
@@ -286,30 +285,27 @@
         </div>
     </section>
 
-    <!-- Assignments -->
-    <section id="assignments">
-        <h2>Assignments</h2>
+    <!-- Academic Artifacts -->
+    <section id="academic-artifacts">
+        <h2>Academic Artifacts</h2>
         <div class="grid">
 
             <div class="card">
-                <h4>Data Structures Assignment</h4>
-                <p>Implementation of stacks, queues, linked lists, and trees using C/C++.</p>
-                <p><b>Subject:</b> Data Structures</p>
-                <a href="#">View Assignment</a>
+                <h4>Assignment 1: Student Profiling</h4>
+                <p>Detailed self-reflection and professional mapping.</p>
+                <p><b>PDF:</b> <a href="Assignment1_StudentProfiling.pdf" target="_blank">View PDF</a></p>
             </div>
 
             <div class="card">
-                <h4>AI Algorithms Lab</h4>
-                <p>Hands-on implementation of BFS, DFS, Dijkstra, KNN, and K-Means algorithms.</p>
-                <p><b>Subject:</b> Artificial Intelligence</p>
-                <a href="#">View Assignment</a>
+                <h4>Assignment 2: AI Project Report</h4>
+                <p>Analysis and implementation of AI algorithms.</p>
+                <p><b>PDF:</b> <a href="Assignment2_AI_Project.pdf" target="_blank">View PDF</a></p>
             </div>
 
             <div class="card">
-                <h4>Machine Learning Models</h4>
-                <p>Regression and classification models implemented using Python and NumPy.</p>
-                <p><b>Subject:</b> Machine Learning</p>
-                <a href="#">View Assignment</a>
+                <h4>Assignment 3: ML Model Evaluation</h4>
+                <p>Regression and classification model evaluation using Python.</p>
+                <p><b>PDF:</b> <a href="Assignment3_ML_Model.pdf" target="_blank">View PDF</a></p>
             </div>
 
         </div>
