--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <style>
         :root {
-            --bg: #000000;          /* Pure black */
-            --card: #0f1a0f;        /* Dark green-black */
-            --text: #eaffea;        /* Soft green-white */
-            --muted: #9acd9a;       /* Muted green */
-            --accent: #00ff66;      /* Neon green */
+            --bg: #000000;
+            --card: #0f1a0f;
+            --text: #eaffea;
+            --muted: #9acd9a;
+            --accent: #00ff66;
         }
 
         * {
@@ -63,7 +63,6 @@
             padding-left: 12px;
         }
 
-        /* Navbar */
         nav {
             position: fixed;
             top: 0;
@@ -80,7 +79,6 @@
             font-size: 0.9rem;
         }
 
-        /* Hero */
         .hero {
             min-height: 100vh;
             display: flex;
@@ -134,7 +132,6 @@
             opacity: 0.85;
         }
 
-        /* Grid & Cards */
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -289,25 +286,11 @@
     <section id="academic-artifacts">
         <h2>Academic Artifacts</h2>
         <div class="grid">
-
             <div class="card">
                 <h4>Assignment 1: Student Profiling</h4>
                 <p>Detailed self-reflection and professional mapping.</p>
                 <p><b>PDF:</b> <a href="Assignment1_StudentProfiling.pdf" target="_blank">View PDF</a></p>
             </div>
-
-            <div class="card">
-                <h4>Assignment 2: AI Project Report</h4>
-                <p>Analysis and implementation of AI algorithms.</p>
-                <p><b>PDF:</b> <a href="Assignment2_AI_Project.pdf" target="_blank">View PDF</a></p>
-            </div>
-
-            <div class="card">
-                <h4>Assignment 3: ML Model Evaluation</h4>
-                <p>Regression and classification model evaluation using Python.</p>
-                <p><b>PDF:</b> <a href="Assignment3_ML_Model.pdf" target="_blank">View PDF</a></p>
-            </div>
-
         </div>
     </section>
 
