Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </p>
             <div class="btn-group">
                 <a href="#projects" class="btn-primary">View Projects</a>
-                <a href="resume.pdf" class="btn-outline">Download Resume</a>
+                <a href="resume.pdf" class="btn-outline" target="_blank">Download Resume</a>
             </div>
         </div>
     </section>
@@ -310,10 +310,10 @@
     <section id="contact">
         <h2>Contact</h2>
         <ul>
-            <li>Email: gourvanshairenagarwal2497@gmail.com</li>
-            <li>Phone: +91 9389842497</li>
-            <li>GitHub: <a href="#">github.com/yourusername</a></li>
-            <li>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></li>
+            <li>Email: <a href="mailto:gourvanshairenagarwal2497@gmail.com">gourvanshairenagarwal2497@gmail.com</a></li>
+            <li>Phone: <a href="tel:+919389842497">+91 9389842497</a></li>
+            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/gourvansh-airen-agarwal-a031b5323" target="_blank">linkedin.com/in/gourvansh-airen-agarwal-a031b5323</a></li>
         </ul>
     </section>
 
