--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         .card:hover {
             transform: translateY(-6px);
-            box-shadow: 0 0 15px rgba(0, 255, 102, 0.4);
+            box-shadow: 0 0 15x rgba(0, 255, 102, 0.4);
         }
 
         .card h4 {
@@ -244,21 +244,21 @@
                 <h4>Online Examination System</h4>
                 <p>Console-based exam management system using C and file handling for student data, exams, and results.</p>
                 <p><b>Tech:</b> C, File I/O</p>
-                <a href="#">View Code</a>
+                <a href="https://github.com/gourvanshairenagarwal2497-svg" target="_blank">View Code</a>
             </div>
 
             <div class="card">
                 <h4>Optimal Route Finder</h4>
                 <p>Graph-based algorithm project to compute shortest and optimal paths using Dijkstra’s algorithm.</p>
                 <p><b>Tech:</b> Algorithms, Graphs</p>
-                <a href="#">View Code</a>
+                <a href="https://github.com/gourvanshairenagarwal2497-svg" target="_blank">View Code</a>
             </div>
 
             <div class="card">
                 <h4>Image Encrypter & Decrypter</h4>
                 <p>Secure image encryption system ensuring data confidentiality using cryptographic techniques.</p>
                 <p><b>Tech:</b> Information Security</p>
-                <a href="#">View Code</a>
+                <a href="https://github.com/gourvanshairenagarwal2497-svg" target="_blank">View Code</a>
             </div>
         </div>
     </section>
@@ -312,7 +312,7 @@
         <ul>
             <li>Email: <a href="mailto:gourvanshairenagarwal2497@gmail.com">gourvanshairenagarwal2497@gmail.com</a></li>
             <li>Phone: <a href="tel:+919389842497">+91 9389842497</a></li>
-            <li>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
+            <li>GitHub: <a href="https://github.com/gourvanshairenagarwal2497-svg" target="_blank">github.com/gourvanshairenagarwal2497-svg</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/gourvansh-airen-agarwal-a031b5323" target="_blank">linkedin.com/in/gourvansh-airen-agarwal-a031b5323</a></li>
         </ul>
     </section>
